--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cubicweb (3.8.6-1) unstable; urgency=low
+
+  * new upstream release
+
+ -- Sylvain Thénault <sylvain.thenault@logilab.fr>  Fri, 02 Jul 2010 00:39:36 +0200
+
 cubicweb (3.8.5-1) unstable; urgency=low
 
   * new upstream release
