--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cubicweb (3.9.1-1) unstable; urgency=low
+
+  * new upstream release
+
+ -- Sylvain Thénault <sylvain.thenault@logilab.fr>  Mon, 12 Jul 2010 13:25:10 +0200
+
 cubicweb (3.9.0-1) unstable; urgency=low
 
   * new upstream release
