--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cubicweb (3.9.3-1) unstable; urgency=low
+
+  * new upstream release
+
+ -- Sylvain Thénault <sylvain.thenault@logilab.fr>  Tue, 27 Jul 2010 16:39:04 +0200
+
 cubicweb (3.9.2-1) unstable; urgency=low
 
   * new upstream release
